vis add time complexity

--- a/make_figure.ipynb
+++ b/make_figure.ipynb
@@ -584,7 +584,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 非规整网格-可视化"
+    "# 算法复杂度-可视化"
    ]
   },
   {
@@ -593,7 +593,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "from scripts.visualize import *\n",
+    "\n",
+    "proj_name = 'selected'\n",
+    "r = SampleUnion(proj_name)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from scipy.optimize import curve_fit\n",
+    "\n",
+    "x_values = []\n",
+    "y_values = []\n",
+    "\n",
+    "for j in sorted(r.results.keys(), key=lambda x: r.results[x].gt_mesh.n_points):\n",
+    "    sample = r.results[j]\n",
+    "    v = sample.gt_mesh.n_points * 1e-3 # -> K \n",
+    "    t = sample.time * 1e-3 # ms -> s\n",
+    "    x_values.append(v)\n",
+    "    y_values.append(t)\n",
+    "\n",
+    "x_data = np.array(x_values)\n",
+    "y_data = np.array(y_values)\n",
+    "\n",
+    "def power_function(x, a, b):\n",
+    "    return a * np.power(x, b)\n",
+    "\n",
+    "params, covariance = curve_fit(power_function, x_data, y_data)\n",
+    "\n",
+    "a_fit, b_fit = params\n",
+    "\n",
+    "font = {'family' : 'Times New Roman',\n",
+    "        'size'   : 12}\n",
+    "\n",
+    "\n",
+    "plt.rc('font', **font)\n",
+    "plt.grid(True)\n",
+    "\n",
+    "plt.scatter(x_data, y_data, label='Original data')\n",
+    "x_fit = np.linspace(min(x_data), max(x_data), 100)\n",
+    "plt.plot(x_fit, power_function(x_fit, a_fit, b_fit), color='red', label='Fitted curve')\n",
+    "\n",
+    "plt.savefig('exp/compiler_opt2.png', dpi=300, bbox_inches='tight')\n",
+    "plt.xlabel('Vertice nums (K)')\n",
+    "plt.ylabel('Time (s)')\n",
+    "plt.title('Algorithm Time Complexity')\n",
+    "\n",
+    "plt.savefig('exp/time_complexity_o2.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "print(\"power_fun a:\", a_fit)\n",
+    "print(\"power_fun b:\", b_fit)"
    ]
   }
  ],
