add iter experiment

--- a/make_figure.ipynb
+++ b/make_figure.ipynb
@@ -652,6 +652,205 @@
     "print(\"power_fun a:\", a_fit)\n",
     "print(\"power_fun b:\", b_fit)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 数值求解器\n",
+    "\n",
+    "## 随着HQS迭代，每个step中求解器所需的迭代次数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import copy\n",
+    "from scripts.visualize import *\n",
+    "\n",
+    "def parse(line):\n",
+    "    # NAME:'xxx \\n' -> 'xxx'\n",
+    "    # return line.split()[0].split(':')[1]\n",
+    "    return line.split(':')[1].split()[0]\n",
+    "\n",
+    "\n",
+    "\n",
+    "def get_iter_steps(proj_name):\n",
+    "    work_dir = './run/{}/'.format(proj_name)\n",
+    "    assert os.path.exists(work_dir), \"Please ensure this job exists in ./run\"\n",
+    "    time_file = work_dir + 'time.txt'\n",
+    "\n",
+    "    f=open(time_file)\n",
+    "    data = f.readlines() \n",
+    "    f.close()\n",
+    "\n",
+    "    dim0 = []\n",
+    "    dim1 = []\n",
+    "    dim2 = []\n",
+    "\n",
+    "    outer = 0\n",
+    "    name = None\n",
+    "    inner = 0\n",
+    "\n",
+    "    while(outer<len(data)):\n",
+    "        line = data[outer]\n",
+    "        if line.startswith('Iteration'):\n",
+    "            num = parse(line)\n",
+    "            if inner%3 == 0:\n",
+    "                dim0.append(int(num))\n",
+    "            elif inner%3 == 1:\n",
+    "                dim1.append(int(num))\n",
+    "            else:\n",
+    "                dim2.append(int(num))  \n",
+    "            inner += 1         \n",
+    "        outer += 1\n",
+    "    return dim0, dim1, dim2 \n",
+    "\n",
+    "\n",
+    "# r = SampleUnion(proj_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "i0, _, _ = get_iter_steps('iter-block-0')\n",
+    "i1, _, _ = get_iter_steps('iter-block-1')\n",
+    "i2, _, _ = get_iter_steps('iter-block-2')\n",
+    "i3, _, _ = get_iter_steps('iter-block-3')\n",
+    "i4, _, _ = get_iter_steps('iter-block-4')\n",
+    "i5, _, _ = get_iter_steps('iter-block-5')\n",
+    "\n",
+    "c0 = (239,145,99)\n",
+    "c1 = (53,93,115)\n",
+    "c2 = (141,192,200)\n",
+    "c3 = (213,199,172)\n",
+    "c4 = (234,199,114)\n",
+    "c5 = (105,169, 78)\n",
+    "\n",
+    "def gen_c(colors):\n",
+    "    ret = []\n",
+    "    for color in colors:\n",
+    "        c = (color[0]/255, color[1]/255, color[2]/255)\n",
+    "        ret.append(c)\n",
+    "    return ret\n",
+    "\n",
+    "cc = gen_c([c0,c1,c2,c3,c4,c5])         \n",
+    "\n",
+    "data = {'Jacobi':i0, \n",
+    "        'Gauss-Seidel':i1,\n",
+    "        'CG':i2,\n",
+    "        'BiCGSTAB':i3,\n",
+    "        'MINRES':i4,\n",
+    "        'GMRES':i5\n",
+    "        }\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "font = {'family' : 'Times New Roman',\n",
+    "        'size'   : 12}\n",
+    "\n",
+    "\n",
+    "plt.rc('font', **font)\n",
+    "\n",
+    "ax = sns.lineplot(df, palette=cc)\n",
+    "ax.set_ylim(0,1200)\n",
+    "\n",
+    "plt.ylabel(\"Solver's iters\", fontsize=12)\n",
+    "plt.savefig('exp/iter_iters.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 每种Solver固定不同的迭代次数，其对应结果的AAD指标"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "r0 = SampleUnion('iter-block-0')\n",
+    "r1 = SampleUnion('iter-block-1')\n",
+    "r2 = SampleUnion('iter-block-2')\n",
+    "r3 = SampleUnion('iter-block-3')\n",
+    "r4 = SampleUnion('iter-block-4')\n",
+    "r5 = SampleUnion('iter-block-5')\n",
+    "\n",
+    "Rs = [r0, r1, r2, r3, r4, r5]\n",
+    "As = [[],[],[],[],[],[]]\n",
+    "\n",
+    "for i in range(1,41):\n",
+    "    for j in range(6):\n",
+    "        As[j].append(Rs[j].results['block{}'.format(i)].AAD)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "c0 = (239,145,99)\n",
+    "c1 = (53,93,115)\n",
+    "c2 = (141,192,200)\n",
+    "c3 = (213,199,172)\n",
+    "c4 = (234,199,114)\n",
+    "c5 = (105,169, 78)\n",
+    "\n",
+    "def gen_c(colors):\n",
+    "    ret = []\n",
+    "    for color in colors:\n",
+    "        c = (color[0]/255, color[1]/255, color[2]/255)\n",
+    "        ret.append(c)\n",
+    "    return ret\n",
+    "\n",
+    "cc = gen_c([c0,c1,c2,c3,c4,c5])         \n",
+    "\n",
+    "data = {'Jacobi':As[0], \n",
+    "        'Gauss-Seidel':As[1],\n",
+    "        'CG':As[2],\n",
+    "        'BiCGSTAB':As[3],\n",
+    "        'MINRES':As[4],\n",
+    "        'GMRES':As[5]\n",
+    "        }\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "font = {'family' : 'Times New Roman',\n",
+    "        'size'   : 12}\n",
+    "\n",
+    "\n",
+    "plt.rc('font', **font)\n",
+    "\n",
+    "ax = sns.lineplot(df, palette=cc)\n",
+    "ax.set_ylim(2.5,4.5)\n",
+    "\n",
+    "plt.ylabel(\"Average Angular Distance\", fontsize=12)\n",
+    "plt.savefig('exp/iter_aads.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
