--- a/make_figure.ipynb
+++ b/make_figure.ipynb
@@ -851,6 +851,84 @@
     "plt.savefig('exp/iter_aads.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 每种Solver固定不同的迭代次数，其所需要的时间"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r0 = SampleUnion('iter-block-0')\n",
+    "r1 = SampleUnion('iter-block-1')\n",
+    "r2 = SampleUnion('iter-block-2')\n",
+    "r3 = SampleUnion('iter-block-3')\n",
+    "r4 = SampleUnion('iter-block-4')\n",
+    "r5 = SampleUnion('iter-block-5')\n",
+    "\n",
+    "Rs = [r0, r1, r2, r3, r4, r5]\n",
+    "As = [[],[],[],[],[],[]]\n",
+    "\n",
+    "for i in range(1,41):\n",
+    "    for j in range(6):\n",
+    "        As[j].append(Rs[j].results['block{}'.format(i)].time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "c0 = (239,145,99)\n",
+    "c1 = (53,93,115)\n",
+    "c2 = (141,192,200)\n",
+    "c3 = (213,199,172)\n",
+    "c4 = (234,199,114)\n",
+    "c5 = (105,169, 78)\n",
+    "\n",
+    "def gen_c(colors):\n",
+    "    ret = []\n",
+    "    for color in colors:\n",
+    "        c = (color[0]/255, color[1]/255, color[2]/255)\n",
+    "        ret.append(c)\n",
+    "    return ret\n",
+    "\n",
+    "cc = gen_c([c0,c1,c2,c3,c4,c5])         \n",
+    "\n",
+    "data = {'Jacobi':As[0], \n",
+    "        'Gauss-Seidel':As[1],\n",
+    "        'CG':As[2],\n",
+    "        'BiCGSTAB':As[3],\n",
+    "        'MINRES':As[4],\n",
+    "        'GMRES':As[5]\n",
+    "        }\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "font = {'family' : 'Times New Roman',\n",
+    "        'size'   : 12}\n",
+    "\n",
+    "\n",
+    "plt.rc('font', **font)\n",
+    "\n",
+    "ax = sns.lineplot(df, palette=cc)\n",
+    "#ax.set_ylim(2.5,4.5)\n",
+    "\n",
+    "plt.ylabel(\"Time (ms)\", fontsize=12)\n",
+    "plt.savefig('exp/iter_time.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
