add noise analysis figure

--- a/make_figure.ipynb
+++ b/make_figure.ipynb
@@ -652,6 +652,223 @@
     "print(\"power_fun a:\", a_fit)\n",
     "print(\"power_fun b:\", b_fit)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 噪声分析\n",
+    "\n",
+    "## Kinect v1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import igl\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "bin_num = 100\n",
+    "\n",
+    "def get_sigma(x):\n",
+    "    return np.sqrt(np.mean(np.square(x)))\n",
+    "\n",
+    "def get_magnitude(name='big_girl_01', t='Kinect_v1'):\n",
+    "    v1, f = igl.read_triangle_mesh('data/{}/train/noisy/{}_noisy.obj'.format(t, name))\n",
+    "    avg = igl.avg_edge_length(v1, f)\n",
+    "    v2, _ = igl.read_triangle_mesh('data/{}/train/original/{}.obj'.format(t, name))\n",
+    "    v = v2 - v1\n",
+    "    magnitude = np.linalg.norm(v, axis=1)/avg\n",
+    "    return magnitude\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "#plt.title('Kinect v1')\n",
+    "\n",
+    "m1 = get_magnitude(name='big_girl_01')\n",
+    "m2 = get_magnitude(name='cone_01')\n",
+    "m3 = get_magnitude(name='david_01')\n",
+    "m4 = get_magnitude(name='pyramid_01')\n",
+    "\n",
+    "plt.hist(m1, bins=bin_num, density=True, alpha=0.6, color='b', label='big_girl_01')\n",
+    "plt.hist(m2, bins=bin_num, density=True, alpha=0.6, color='r', label='cone_01')\n",
+    "plt.hist(m3, bins=bin_num, density=True, alpha=0.6, color='g', label='david_01')\n",
+    "plt.hist(m4, bins=bin_num, density=True, alpha=0.6, color='y', label='pyramid_01')\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "\n",
+    "plt.savefig('exp/noise_analysis_v1.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()\n",
+    "\n",
+    "print('big_girl_01:', get_sigma(m1))\n",
+    "print('cone_01:', get_sigma(m2))\n",
+    "print('david_01:', get_sigma(m3))\n",
+    "print('pyramid_01:', get_sigma(m4))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Kinect v2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 6))\n",
+    "#plt.title('Kinect v2')\n",
+    "\n",
+    "m1 = get_magnitude(name='big_girl_01', t='Kinect_v2')\n",
+    "m2 = get_magnitude(name='cone_01', t='Kinect_v2')\n",
+    "m3 = get_magnitude(name='david_01', t='Kinect_v2')\n",
+    "m4 = get_magnitude(name='pyramid_01', t='Kinect_v2')\n",
+    "\n",
+    "plt.hist(m1, bins=bin_num, density=True, alpha=0.6, color='b', label='big_girl_01')\n",
+    "plt.hist(m2, bins=bin_num, density=True, alpha=0.6, color='r', label='cone_01')\n",
+    "plt.hist(m3, bins=bin_num, density=True, alpha=0.6, color='g', label='david_01')\n",
+    "plt.hist(m4, bins=bin_num, density=True, alpha=0.6, color='y', label='pyramid_01')\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "\n",
+    "plt.savefig('exp/noise_analysis_v2.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()\n",
+    "\n",
+    "print('big_girl_01:', get_sigma(m1))\n",
+    "print('cone_01:', get_sigma(m2))\n",
+    "print('david_01:', get_sigma(m3))\n",
+    "print('pyramid_01:', get_sigma(m4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Kinect Fusion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 6))\n",
+    "#plt.title('Kinect Fusion')\n",
+    "\n",
+    "m1 = get_magnitude(name='big_girl', t='Kinect_Fusion')\n",
+    "m2 = get_magnitude(name='cone', t='Kinect_Fusion')\n",
+    "m3 = get_magnitude(name='girl', t='Kinect_Fusion')\n",
+    "\n",
+    "plt.hist(m1, bins=bin_num, density=True, alpha=0.6, color='b', label='big_girl')\n",
+    "plt.hist(m2, bins=bin_num, density=True, alpha=0.6, color='r', label='cone_01')\n",
+    "plt.hist(m3, bins=bin_num, density=True, alpha=0.6, color='g', label='girl')\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "\n",
+    "plt.savefig('exp/noise_analysis_f.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()\n",
+    "\n",
+    "print('big_girl:', get_sigma(m1))\n",
+    "print('cone_01:', get_sigma(m2))\n",
+    "print('girl:', get_sigma(m3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Print Data\n",
+    "\n",
+    "\n",
+    "model_names = ['Ankylosaurus', \n",
+    "                   'Armor_cat',\n",
+    "                   'Cat_fangs',\n",
+    "                   'Deer',\n",
+    "                   'Direwolf',\n",
+    "                   'Emissary_wolf', \n",
+    "                   'Girl',\n",
+    "                   'Goblin',\n",
+    "                   'Goku',\n",
+    "                   'Messi',\n",
+    "                   'Minion_ghost',\n",
+    "                   'Nut',\n",
+    "                   'Putin',\n",
+    "                   'Snoopy',\n",
+    "                   'Snoopy_flying_face',\n",
+    "                   'Sphagetti_Detective',\n",
+    "                   'Stitch_guitar',\n",
+    "                   'Stitch_stand',\n",
+    "                   'Suit_man',\n",
+    "                   'Tp']\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import numpy as np\n",
+    "import open3d as o3d\n",
+    "\n",
+    "from tqdm import tqdm\n",
+    "from sklearn import neighbors\n",
+    "def compute_vert_distance_error_with_pc_kdtree(scanned_mesh, gt_pc):\n",
+    "    ret = []\n",
+    "    scanned_vertices = np.asarray(scanned_mesh.vertices)\n",
+    "    gt_centroids = np.asarray(gt_pc.points)\n",
+    "    kd_tree = neighbors.KDTree(gt_centroids)\n",
+    "    for i in tqdm(range(scanned_vertices.shape[0])):\n",
+    "        query_point = [scanned_vertices[i]]\n",
+    "        dist, ind = kd_tree.query(query_point, k = 1)\n",
+    "        ret.append(dist[0])\n",
+    "\n",
+    "    return np.array(ret)\n",
+    "\n",
+    "def get_magnitude(name='Tp'):\n",
+    "    gt_pc = o3d.io.read_point_cloud('data/PrintedDataset/gt_pc/{}.ply'.format(name))\n",
+    "    mesh = o3d.io.read_triangle_mesh('data/PrintedDataset/noisy/{}.obj'.format(name))\n",
+    "    ret = compute_vert_distance_error_with_pc_kdtree(mesh, gt_pc)\n",
+    "    ret = ret.squeeze()\n",
+    "\n",
+    "    v1, f = igl.read_triangle_mesh('data/PrintedDataset/noisy/{}.obj'.format(name))\n",
+    "    avg = igl.avg_edge_length(v1, f)\n",
+    "    ret = (1/avg) * ret\n",
+    "    return ret\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "#plt.title('Printed Data')\n",
+    "\n",
+    "m1 = get_magnitude(name='Tp')\n",
+    "m2 = get_magnitude(name='Nut')\n",
+    "m3 = get_magnitude(name='Goblin')\n",
+    "\n",
+    "plt.hist(m1, bins=bin_num, density=True, alpha=0.6, color='b', label='Tp')\n",
+    "plt.hist(m2, bins=bin_num, density=True, alpha=0.6, color='r', label='Nut')\n",
+    "plt.hist(m3, bins=bin_num, density=True, alpha=0.6, color='g', label='Goblin')\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "\n",
+    "plt.savefig('exp/noise_analysis_p.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()\n",
+    "\n",
+    "print('Tp:', np.std(m1))\n",
+    "print('Nut:', np.std(m2))\n",
+    "print('Goblin:', np.std(m3))"
+   ]
   }
  ],
  "metadata": {
