--- a/make_figure.ipynb
+++ b/make_figure.ipynb
@@ -43,225 +43,10 @@
     "pyvista 的 [shadow](https://pyvista-experimental-dynamic.netlify.app/examples/04-lights/shadows) 不好，没有软阴影的。尝试了一下，改成自定义光源+开SSAO的方式\n",
     "\n",
     "https://docs.pyvista.org/version/stable/api/plotting/_autosummary/pyvista.plotter.enable_ssao\n",
-    "s\n",
     "\n",
-    "pip install opencv-python -i https://pypi.tuna.tsinghua.edu.cn/simple\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def render_test(mesh, \n",
-    "                        zoom=5, \n",
-    "                        mesh_color='white',\n",
-    "                        feature_color='k',\n",
-    "                        feature_line_width=5,\n",
-    "                        render_smooth=False,\n",
-    "                        render_sharp=False,\n",
-    "                        name='vert',\n",
-    "                        folder='cube',\n",
-    "                        resolution=800,\n",
-    "                        floor_up = 0.,\n",
-    "                        ssao_radius=2,\n",
-    "                        ssao_bias=0.5,\n",
-    "                        ssao_kernel_size=256,\n",
-    "                        use_shadow = False):\n",
-    "    fig_name = 'exp/'+folder\n",
-    "    if not os.path.exists(fig_name):\n",
-    "        os.mkdir(fig_name)\n",
-    "    fig_name = fig_name+'/'+name+'.png'\n",
-    "    \n",
+    "pip install opencv-python -i https://pypi.tuna.tsinghua.edu.cn/simple\n",
     "\n",
-    "    # Add a thin box below the mesh\n",
-    "    bounds = mesh.bounds\n",
-    "    rnge = (bounds[1] - bounds[0], bounds[3] - bounds[2], bounds[5] - bounds[4])\n",
-    "\n",
-    "    expand = 5.0\n",
-    "    height = rnge[2] * floor_up\n",
-    "    center = np.array(mesh.center)\n",
-    "    center -= [0, 0, mesh.center[2] - bounds[4] + height / 2]\n",
-    "\n",
-    "    width = rnge[0] * (1 + expand)\n",
-    "    length = rnge[1] * (1 + expand)\n",
-    "    base_mesh = pyvista.Cube(center, width, length, height)\n",
-    "\n",
-    "    # rotate base and mesh to get a better view\n",
-    "    #base_mesh.rotate_z(30, inplace=True)\n",
-    "    #mesh.rotate_z(30, inplace=True)\n",
-    "\n",
-    "    light1 = pyvista.Light(\n",
-    "        position=(0, rnge[1]*10, 0),\n",
-    "        focal_point=(0, 0, 0),\n",
-    "        #color=[1.0, 0.83921, 0.6666, 1.0],  # Color temp. 2850 K\n",
-    "        color=[1.0, 1.0, 1.0, 1.0],\n",
-    "        intensity=1.1\n",
-    "        ,\n",
-    "    )\n",
-    "\n",
-    "    light2 = pyvista.Light(\n",
-    "        position=(0, 0, rnge[2]*10),\n",
-    "        focal_point=(0, 0, 0),\n",
-    "        #color=[1.0, 0.83921, 0.6666, 1.0],  # Color temp. 2850 K\n",
-    "        color=[1.0, 1.0, 1.0, 1.0],\n",
-    "        intensity=1.1\n",
-    "        ,\n",
-    "    )\n",
-    "\n",
-    "    light3 = pyvista.Light(\n",
-    "        position=(rnge[0]*10, 0, 0.0),\n",
-    "        focal_point=(0, 0, 0),\n",
-    "        #color=[1.0, 0.83921, 0.6666, 1.0],  # Color temp. 2850 K\n",
-    "        color=[1.0, 1.0, 1.0, 1.0],\n",
-    "        intensity=1.1\n",
-    "        ,\n",
-    "    )\n",
-    "\n",
-    "    # create the plotter with custom lighting\n",
-    "    \"\"\"\"\n",
-    "    pl = pyvista.Plotter(lighting=None, window_size=(resolution, resolution), off_screen=True)\n",
-    "    pl.add_light(light1)\n",
-    "    pl.add_light(light2)\n",
-    "    pl.add_light(light3)\n",
-    "    \n",
-    "    pl.add_mesh(\n",
-    "        mesh,\n",
-    "        color=mesh_color,\n",
-    "        smooth_shading=render_smooth, \n",
-    "        split_sharp_edges=render_sharp\n",
-    "    )\n",
-    "    \"\"\"\n",
-    "    pl = pyvista.Plotter(window_size=(resolution, resolution), off_screen=True)\n",
-    "    pl.add_mesh(\n",
-    "        mesh,\n",
-    "        color=mesh_color,\n",
-    "        smooth_shading=render_smooth, \n",
-    "        split_sharp_edges=render_sharp\n",
-    "    )\n",
-    "    pl.add_mesh(base_mesh, color='lightblue')\n",
-    "    edges = mesh.extract_feature_edges(\n",
-    "    boundary_edges=False, non_manifold_edges=False, feature_angle=70, manifold_edges=False\n",
-    ")\n",
-    "    #pl.add_mesh(edges, color=feature_color, line_width=feature_line_width)\n",
-    "    if use_shadow:\n",
-    "        pl.enable_shadows()\n",
-    "    pl.enable_ssao(radius=ssao_radius, bias=ssao_bias, kernel_size=ssao_kernel_size, blur=True)\n",
-    "    pl.enable_anti_aliasing('ssaa')\n",
-    "    pl.camera.zoom(zoom)\n",
-    "    pl.show(screenshot=fig_name)\n",
-    "    pl.close()\n",
-    "\n",
-    "proj_name = 'selected'\n",
-    "r = SampleUnion(proj_name)\n",
-    "\n",
-    "name='block'\n",
-    "mesh = r.results[name].denoised_mesh \n",
-    "render_test(mesh)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def render_scene1(mesh):\n",
-    "    lightfac = 1.2\n",
-    "    light1 = pyvista.Light(\n",
-    "        position=(0, lightfac*1.0, 0),\n",
-    "        focal_point=(0, 0, 0),\n",
-    "        #color=[1.0, 0.83921, 0.6666, 1.0],  # Color temp. 2850 K\n",
-    "        color=[1.0, 1.0, 1.0, 1.0],\n",
-    "        intensity=0.8\n",
-    "        ,\n",
-    "    )\n",
-    "\n",
-    "    light2 = pyvista.Light(\n",
-    "        position=(0, 0, lightfac*1.0),\n",
-    "        focal_point=(0, 0, 0),\n",
-    "        #color=[1.0, 0.83921, 0.6666, 1.0],  # Color temp. 2850 K\n",
-    "        color=[1.0, 1.0, 1.0, 1.0],\n",
-    "        intensity=1.1\n",
-    "        ,\n",
-    "    )\n",
-    "\n",
-    "    light3 = pyvista.Light(\n",
-    "        position=(lightfac*1.0, 0, 0.0),\n",
-    "        focal_point=(0, 0, 0),\n",
-    "        #color=[1.0, 0.83921, 0.6666, 1.0],  # Color temp. 2850 K\n",
-    "        color=[1.0, 1.0, 1.0, 1.0],\n",
-    "        intensity=0.8\n",
-    "        ,\n",
-    "    )\n",
-    "\n",
-    "    # Add a thin box below the mesh\n",
-    "    bounds = mesh.bounds\n",
-    "    rnge = (bounds[1] - bounds[0], bounds[3] - bounds[2], bounds[5] - bounds[4])\n",
-    "\n",
-    "    expand = 5.0\n",
-    "    height = rnge[2] * 0.05\n",
-    "    center = np.array(mesh.center)\n",
-    "    center -= [0, 0, mesh.center[2] - bounds[4] + height / 2]\n",
-    "\n",
-    "    width = rnge[0] * (1 + expand)\n",
-    "    length = rnge[1] * (1 + expand)\n",
-    "    base_mesh = pyvista.Cube(center, width, length, height)\n",
-    "\n",
-    "    # rotate base and mesh to get a better view\n",
-    "    #base_mesh.rotate_z(30, inplace=True)\n",
-    "    #mesh.rotate_z(30, inplace=True)\n",
-    "\n",
-    "    # create the plotter with custom lighting\n",
-    "    pl = pyvista.Plotter(lighting=None, window_size=(800, 800))\n",
-    "    pl.add_light(light1)\n",
-    "    pl.add_light(light2)\n",
-    "    pl.add_light(light3)\n",
-    "    pl.add_mesh(\n",
-    "        mesh,\n",
-    "        ambient=0.2,\n",
-    "        diffuse=0.5,\n",
-    "        specular=0.4,\n",
-    "        specular_power=50,\n",
-    "        #smooth_shading=True,\n",
-    "        color='white',\n",
-    "    )\n",
-    "    pl.add_mesh(base_mesh, color='white')\n",
-    "    #pl.enable_shadows()\n",
-    "    pl.enable_ssao(radius=0.6, bias=0.05, kernel_size=256, blur=True)\n",
-    "    edges = mesh.extract_feature_edges(\n",
-    "    boundary_edges=False, non_manifold_edges=False, feature_angle=150, manifold_edges=False\n",
-    ")\n",
-    "    pl.add_mesh(edges, color='purple', line_width=5)\n",
-    "    pl.camera.zoom(5)\n",
-    "    pl.show()\n",
-    "    pl.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pyvista as pv\n",
-    "mesh = r.results['BNF'].denoised_mesh\n",
-    "print(mesh)\n",
-    "mesh = r.results['edge'].denoised_mesh\n",
-    "print(mesh)\n",
-    "#mesh = r.results['noise'].denoised_mesh\n",
-    "\n",
-    "\n",
-    "render_scene1(mesh)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "pip install bpy -i https://pypi.tuna.tsinghua.edu.cn/simple\n"
+    "~~pip install bpy -i https://pypi.tuna.tsinghua.edu.cn/simple~~\n"
    ]
   },
   {
@@ -385,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -701,6 +486,7 @@
     }
    ],
    "source": [
+    "sargs = dict(height=0.2, vertical=True, position_x=0.9, position_y=0.75, n_labels=2)\n",
     "proj_name = 'selected'\n",
     "r = SampleUnion(proj_name)\n",
     "\n",
@@ -716,7 +502,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sargs = dict(height=0.2, vertical=True, position_x=0.9, position_y=0.75, n_labels=2)\n",
+    "\n",
     "\n",
     "rr.set_mesh('part_Lp')\n",
     "rr.append_feature_line()\n",
@@ -793,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +588,7 @@
     "rr.append_light(strength1=0.4, strength2=0.6, strength3=0.4)\n",
     "#rr.append_ground()\n",
     "rr.enable_ao()\n",
-    "rr.render(cy=0.5)\n",
+    "rr.render(cy=0.5, zoom=1.3)\n",
     "rr.render_norm(sargs = sargs)\n",
     "rr.concat()"
    ]
@@ -825,16 +611,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "rr.set_mesh('bunny')\n",
+    "ls = 18\n",
     "#rr.append_feature_line() # no feature line here\n",
-    "rr.append_light(strength1=6, strength2=6, strength3=6)\n",
+    "rr.append_light(strength1=ls, strength2=ls, strength3=ls)\n",
     "#rr.append_ground()\n",
     "rr.enable_ao()\n",
-    "rr.render(cy=0.65, cx=0.75)\n",
+    "rr.render(cy=0.65, cx=0.75, zoom=1.2)\n",
     "rr.render_norm(sargs = sargs)\n",
     "rr.concat()"
    ]
@@ -880,11 +667,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kv1_color = 'lightblue'\n",
+    "kv1_color = 'lightblue'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rr.set_mesh('big_girl_01', mesh_color=kv1_color)\n",
     "rr.append_feature_line()  \n",
     "rr.append_light(strength1=0.4, strength2=0.6, strength3=0.4)\n",
@@ -897,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,7 +701,7 @@
     "rr.append_light(strength1=0.4, strength2=0.6, strength3=0.4)\n",
     "#rr.append_ground()\n",
     "rr.enable_ao()\n",
-    "rr.render(camera_position='xy', cy=0.5)\n",
+    "rr.render(camera_position='xy', cy=0.5, zoom=1.2)\n",
     "rr.render_norm(sargs = sargs)\n",
     "rr.concat()"
    ]
@@ -1116,6 +911,108 @@
     "rr.render(camera_position='xy', cy=0.5)\n",
     "rr.render_norm(sargs = sargs)\n",
     "rr.concat()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# cat imgs together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = SampleUnion(proj_name)\n",
+    "for i in r.results:\n",
+    "    s = r.results[i]\n",
+    "    # print(\"(\\\"{}\\\", [{:.3f}],  [{:.3f}],  [{:.1f} $permille$], [{:.1f}]),\".format(i, s.AAD, s.AHD * 1e3, s.OEP * 1e3, s.time)) # gen my thesis's table\n",
+    "    \"\"\"\n",
+    "    print(i)\n",
+    "    print(\"AAD:   \", s.AAD)\n",
+    "    print(\"AHD:   \", s.AHD * 1e3)\n",
+    "    print(\"OEP:   \", s.OEP)\n",
+    "    print(\"time:   \", s.time)\n",
+    "    print()\n",
+    "    \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "\n",
+    "def cat_out_imgs(img_list, name='syn1'):\n",
+    "    paths = [os.path.join(os.getcwd(), 'exp', i, 'out.png') for i in img_list]\n",
+    "    img_array = ''\n",
+    "    img = ''\n",
+    "    for i, v in enumerate(paths):\n",
+    "        if i == 0:\n",
+    "            img = Image.open(v)  # 打开图片\n",
+    "            img_array = np.array(img)  # 转化为np array对象\n",
+    "        if i > 0:\n",
+    "            img_array2 = np.array(Image.open(v))\n",
+    "            img_array = np.concatenate((img_array, img_array2), axis=0)\n",
+    "            img = Image.fromarray(img_array)\n",
+    "    img.save(os.path.join(os.getcwd(), 'exp', '{}.png'.format(name)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l1 = [\"part_Lp\", \"joint\", \"octa-flower\", \"block\"]\n",
+    "cat_out_imgs(l1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l2 = [\"fertility\", \"bunny\", \"dragon\",  \"chinese_lion\"]\n",
+    "cat_out_imgs(l2, name='syn2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l3 = [\"big_girl_01\", \"cone_01\", \"david_01\", \"pyramid_01\"]\n",
+    "cat_out_imgs(l3, name='real1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l4 = [\"big_girl_03\", \"cone_03\", \"david_03\", \"pyramid_03\"]\n",
+    "cat_out_imgs(l4, name='real2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l5 = [\"cone\", \"girl\", \"boy02\", \"david\"]\n",
+    "cat_out_imgs(l5, name='real3')"
    ]
   },
   {
